# backend/openapi.json
@@ -15,6 +15,92 @@
         ]
       }
     },
+    "/users/students": {
+      "get": {
+        "description": "Fetch a list of students with pagination. Filter by courseId, or semesterId.",
+        "operationId": "UsersController_getStudents",
+        "parameters": [
+          {
+            "name": "studentId",
+            "required": false,
+            "in": "query",
+            "description": "Filter by Student ID",
+            "schema": {
+              "example": "20261144",
+              "type": "string"
+            }
+          },
+          {
+            "name": "courseId",
+            "required": false,
+            "in": "query",
+            "description": "Filter by Course ID",
+            "schema": {
+              "example": "50000004",
+              "type": "string"
+            }
+          },
+          {
+            "name": "semesterId",
+            "required": false,
+            "in": "query",
+            "description": "Filter by Semester ID",
+            "schema": {
+              "example": "20000008",
+              "type": "string"
+            }
+          },
+          {
+            "name": "status",
+            "required": false,
+            "in": "query",
+            "description": "Filter by Student Status",
+            "schema": {
+              "example": "active",
+              "type": "string",
+              "enum": [
+                "active",
+                "passive",
+                "suspended",
+                "graduated"
+              ]
+            }
+          },
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "description": "The page number for pagination context",
+            "schema": {
+              "example": 1,
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "description": "Number of rows to return per page",
+            "schema": {
+              "example": 10,
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User fetched successfully"
+          },
+          "403": {
+            "description": "Forbidden access"
+          }
+        },
+        "summary": "Get List of Filtered Students",
+        "tags": [
+          "users"
+        ]
+      }
+    },
     "/users/{id}": {
       "get": {
         "description": "Retrieve detailed data for a specific student, basic info from users table and the semester maxCredits.",
@@ -75,92 +161,6 @@
             "description": ""
           }
         },
-        "tags": [
-          "users"
-        ]
-      }
-    },
-    "/users/students": {
-      "get": {
-        "description": "Fetch a list of students with pagination. Filter by courseId, or semesterId.",
-        "operationId": "UsersController_getStudents",
-        "parameters": [
-          {
-            "name": "studentId",
-            "required": false,
-            "in": "query",
-            "description": "Filter by Student ID",
-            "schema": {
-              "example": "20261144",
-              "type": "string"
-            }
-          },
-          {
-            "name": "courseId",
-            "required": false,
-            "in": "query",
-            "description": "Filter by Course ID",
-            "schema": {
-              "example": "50000004",
-              "type": "string"
-            }
-          },
-          {
-            "name": "semesterId",
-            "required": false,
-            "in": "query",
-            "description": "Filter by Semester ID",
-            "schema": {
-              "example": "20000008",
-              "type": "string"
-            }
-          },
-          {
-            "name": "status",
-            "required": false,
-            "in": "query",
-            "description": "Filter by Student Status",
-            "schema": {
-              "example": "active",
-              "type": "string",
-              "enum": [
-                "active",
-                "passive",
-                "suspended",
-                "graduated"
-              ]
-            }
-          },
-          {
-            "name": "page",
-            "required": true,
-            "in": "query",
-            "description": "The page number for pagination context",
-            "schema": {
-              "example": 1,
-              "type": "number"
-            }
-          },
-          {
-            "name": "limit",
-            "required": true,
-            "in": "query",
-            "description": "Number of rows to return per page",
-            "schema": {
-              "example": 10,
-              "type": "number"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User fetched successfully"
-          },
-          "403": {
-            "description": "Forbidden access"
-          }
-        },
-        "summary": "Get List of Filtered Students",
         "tags": [
           "users"
         ]
@@ -335,7 +335,7 @@
           },
           {
             "name": "page",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "Page number for pagination",
             "schema": {
@@ -345,7 +345,7 @@
           },
           {
             "name": "limit",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "Number of items per page",
             "schema": {
@@ -385,7 +385,7 @@
         "parameters": [
           {
             "name": "page",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "Page number for pagination",
             "schema": {
@@ -395,7 +395,7 @@
           },
           {
             "name": "limit",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "Number of items per page",
             "schema": {
@@ -747,7 +747,7 @@
         "parameters": [
           {
             "name": "page",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "Page number for pagination",
             "schema": {
@@ -757,7 +757,7 @@
           },
           {
             "name": "limit",
-            "required": true,
+            "required": false,
             "in": "query",
             "description": "Number of items per page",
             "schema": {
@@ -798,7 +798,7 @@
         "parameters": [
           {
             "name": "page",
-            "required": true,
+            "required": false,
             "in": "query",
             "schema": {
               "example": 1,
@@ -807,7 +807,7 @@
           },
           {
             "name": "limit",
-            "required": true,
+            "required": false,
             "in": "query",
             "schema": {
               "example": 10,
